# rn_bot

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
migrations/2021-04-11-130635_create_users/: up.sql
migrations/2021-04-17-113141_create_events/: up.sql
resources/: channels.toml  exit-messages  joke-gifs  log-debug.json  log.yml  welcome-jokes
src/: actions.rs  admin.rs  bot_error.rs  boterror.rs  channels.rs  discord_config.rs  dnd.rs  event.rs  main.rs  models.rs  moderator.rs  register.rs  schema.rs  utils.rs
src/handler/: mod.rs
src/minecraft/: mod.rs
src/site/: api_response.rs  mod.rs  model.rs  site_client.rs
src/team/: mod.rs
